--- a/index.html
+++ b/index.html
@@ -38,7 +38,133 @@
                 <div class="col-sm-6 bg-light p-3 m-0">
                     <section id="tekst">
                         <h3>Vítejte</h3>
-                        <div>Toto je stránka o hackerech. O jejich práci, o tom, jací jsou a jak se proti nim bránit. Napravo také můžete vidět novinky ze světa softwaru a hackování a hned pod tím různé zajímavé odkazy.</div>
+                        <div>
+                            Toto je stránka o hackerech. O jejich práci, o tom, jací jsou a jak se proti nim bránit. Napravo také můžete vidět novinky ze světa softwaru a hackování a hned pod tím různé zajímavé odkazy.
+                            <br><br>
+                            <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+                            <svg
+                                xmlns:dc="http://purl.org/dc/elements/1.1/"
+                                xmlns:cc="http://creativecommons.org/ns#"
+                                xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                xmlns:svg="http://www.w3.org/2000/svg"
+                                xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                                xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                                version="1.1"
+                                id="svg3713"
+                                width="550"
+                                height="456"
+                                viewBox="0 0 900 746"
+                                sodipodi:docname="motherboard.svg"
+                                inkscape:version="0.92.4 (5da689c313, 2019-01-14)">
+                                <metadata
+                                    id="metadata3719">
+                                    <rdf:RDF>
+                                    <cc:Work
+                                        rdf:about="">
+                                        <dc:format>image/svg+xml</dc:format>
+                                        <dc:type
+                                        rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                                        <dc:title></dc:title>
+                                    </cc:Work>
+                                    </rdf:RDF>
+                                </metadata>
+                                <defs
+                                    id="defs3717" />
+                                <sodipodi:namedview
+                                    pagecolor="#ffffff"
+                                    bordercolor="#666666"
+                                    borderopacity="1"
+                                    objecttolerance="10"
+                                    gridtolerance="10"
+                                    guidetolerance="10"
+                                    inkscape:pageopacity="0"
+                                    inkscape:pageshadow="2"
+                                    inkscape:window-width="1920"
+                                    inkscape:window-height="1018"
+                                    id="namedview3715"
+                                    showgrid="false"
+                                    inkscape:zoom="1.6094736"
+                                    inkscape:cx="433.73633"
+                                    inkscape:cy="445.95799"
+                                    inkscape:window-x="-8"
+                                    inkscape:window-y="-8"
+                                    inkscape:window-maximized="1"
+                                    inkscape:current-layer="svg3713" />
+                                <image
+                                    width="900"
+                                    height="746"
+                                    preserveAspectRatio="none"
+                                    style="image-rendering:optimizeQuality"
+                                    xlink:href="file:///C:/Users/Klara/Desktop/everything/%C5%A0kola/SSPU/PVY/motherboard.jpg"
+                                    id="image3721"
+                                    x="0"
+                                    y="0"
+                                    sodipodi:absref="C:\Users\Klara\Desktop\everything\Škola\SSPU\PVY\motherboard.jpg" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:0.04140127;fill-opacity:0.28025478"
+                                    d="m 471.85159,273.26973 -14.93757,9.66549 1.75736,6.15076 -80.83864,79.08128 2.63605,14.93757 10.54417,7.90813 1.75736,15.81625 27.2391,19.33098 43.05536,1.75736 87.86808,-82.596 3.51473,-11.42285 v -12.30153 z"
+                                    id="path4530"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:0;fill-opacity:0.28025478"
+                                    d="m 328.05757,204.51861 c 0,0 -5.90255,0.31067 -11.8051,3.41727 -5.90255,3.10661 -16.15435,8.38784 -16.15435,8.38784 l -6.21321,5.59189 0.31066,8.07717 c 0,0 0,5.28123 0,6.83453 0,1.55331 0,6.21322 0,6.21322 l 1.86396,4.34924 c 0,0 0.93198,1.55331 2.17462,2.17463 1.24265,0.62132 4.34925,2.48528 5.59189,2.79594 1.24265,0.31066 6.21322,2.17463 6.21322,2.17463 0,0 1.86396,1.5533 3.41726,1.5533 1.5533,0 1.5533,2.17462 3.41727,0 1.86396,-2.17462 28.89143,-24.54218 28.89143,-24.54218 l -1.5533,-6.52388 2.17462,-3.41726 -0.62132,-5.59189 -0.62132,-4.97057 -5.28123,-4.34925 -5.59189,-1.86396 -1.86396,-0.62133 z"
+                                    id="path4532"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 221.50099,257.95223 c -0.93198,1.24265 -48.46305,45.66711 -48.46305,45.66711 l 2.79595,17.08633 54.98692,35.72597 48.46305,-46.28843 -3.10661,-18.95029 z"
+                                    id="path4534"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 662.08598,275.90577 15.81626,7.46879 -2.1967,12.30153 6.5901,-9.22615 14.93758,9.66549 -4.39341,18.01296 10.98351,-14.49824 14.93758,10.10483 -3.07539,12.30153 7.46879,-10.54417 14.49823,8.78681 0.87868,7.90813 -3.95406,8.78681 -3.51472,21.08834 -207.80801,226.69964 -16.2556,-8.78681 -60.62897,-43.49469 0.87868,-12.74088 -6.15077,-8.34746 1.31802,-8.34747 12.30153,-7.46879 10.54417,7.46879 181.88693,-187.59835 3.07538,-17.57362 0.87868,-7.02945 9.22615,-9.22614 z"
+                                    id="path4536"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 475.80565,98.85159 -22.8457,21.52768 1.75736,5.71142 23.28505,14.0589 7.90812,-0.43934 19.33098,-18.4523 1.31802,-7.46879 -26.79976,-15.816251 z"
+                                    id="path4538"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 108.10988,318.53105 -57.161545,51.56965 3.727926,14.29039 22.367562,15.53303 3.106606,-8.07718 22.988881,-19.26095 3.10661,-3.10661 h 3.72792 l 1.24265,-11.18378 25.47416,-18.63963 z"
+                                    id="path4540"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 140.41858,268.20403 -34.79398,31.06606 1.86396,8.07718 2.48528,4.97057 v -1.24265 l 9.94114,8.07718 36.03663,-34.17267 -2.48529,-9.94113 z"
+                                    id="path4542"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 687.1812,178.11247 -3.72793,4.97057 -8.07718,-2.48529 -4.34924,11.18378 -0.62133,9.94114 60.26816,34.17266 1.86396,-3.1066 41.62852,22.98888 3.1066,11.18378 42.87116,18.01831 8.6985,-6.83453 13.66906,8.07718 8.07718,-10.56246 -9.94114,-8.07718 -4.97057,4.97057 3.10661,-9.31982 -34.17267,-19.88227 -7.45585,8.69849 2.48528,-6.83453 -6.83453,-4.97057 -5.59189,5.59189 -4.34925,-2.48528 -4.97057,11.8051 -3.1066,0.62132 -41.62852,-25.47417 1.24264,-9.94114 6.83454,-6.83453 -6.83454,-7.45585 -3.72792,4.97057 -6.21322,-2.48529 4.34925,-6.21321 -28.58077,-15.53303 -5.59189,4.97057 -2.48529,-7.45585 z"
+                                    id="path4544"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 582.48858,222.84759 -6.52387,-0.31066 -5.28123,3.41726 c 0,0 -2.17462,4.03859 -0.93198,5.5919 1.24264,1.5533 -0.31066,13.3584 -0.31066,13.3584 0,0 -2.17463,4.65991 0,5.28123 2.17462,0.62132 6.83453,4.65991 9.00915,4.65991 2.17463,0 5.90255,1.24264 7.76652,-0.31066 1.86396,-1.55331 2.17462,-1.86397 3.1066,-3.41727 0.93199,-1.5533 1.86397,-2.48528 1.86397,-4.03859 0,-1.5533 -1.55331,-4.03858 -1.55331,-4.03858 l -2.17462,-2.48529 c 0,0 0.62132,-3.41726 0.62132,-4.97057 0,-1.5533 0,-4.97057 0,-4.97057 0,0 0.62132,-1.5533 -0.31066,-2.79594 -0.93198,-1.24264 -2.17462,-2.79595 -2.17462,-2.79595 l -1.55331,-1.24264 z"
+                                    id="path4546"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 597.08963,100.44732 -38.52191,36.65795 1.24264,47.22041 74.55854,43.49248 16.77567,-18.01832 6.21321,-19.26095 4.34925,-4.34925 9.31982,5.59189 -0.62133,-16.77567 1.24265,-29.82341 z"
+                                    id="path4548"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 376.52062,96.098074 -82.01439,72.073256 4.97057,20.5036 14.29038,5.59189 31.37672,16.77567 8.38784,16.77567 -36.65795,30.44473 0.62132,19.88228 16.15435,4.97057 48.46305,-49.08437 33.55134,27.33813 80.77175,-80.15043 -0.62132,-14.29038 -13.04774,-8.07718 -82.63572,77.04382 3.72793,14.29039 -20.5036,-16.77567 78.90779,-71.45193 -5.59189,-17.397 -11.18378,-6.83453 -91.33421,90.09157 -9.00916,-16.77567 63.0641,-55.91891 4.97057,-8.69849 7.45585,-1.24264 -0.62132,-3.72793 v -4.34925 l 2.48528,-3.72793 4.34925,-3.1066 -4.97057,-8.6985 -9.31981,-4.34925 -82.63572,74.55854 2.48529,12.42642 -20.5036,-14.9117 78.28646,-70.83061 -0.62132,-16.77568 z"
+                                    id="path4550"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:#ff0000;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;fill-opacity:0.28025478"
+                                    d="m 575.96471,545.93459 -82.01439,91.33421 0.62132,19.88228 17.39699,12.42642 83.25703,-93.19817 -2.48528,-16.77568 z"
+                                    id="path4552"
+                                    inkscape:connector-curvature="0" />
+                            </svg>
+                            <p><span class="headingthing"></span> &nbsp; <small class="smallthings"></small></p>
+                        </div>
                     </section>
                 </div>
                 <div class="col-sm-3 bg-light ml-1 pt-3 m-0">
@@ -83,7 +209,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <script src="js/main.js"></script>
         <script src="js/data.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
