--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="text-center text-uppercase p-5 mb-2">
-            <h1>Hackeři</h1>
+            <h1><u>Hackeři</u></h1>
         </header>
         <main class="p-1 container">
             <!--
@@ -97,7 +97,7 @@
                                     height="746"
                                     preserveAspectRatio="none"
                                     style="image-rendering:optimizeQuality"
-                                    xlink:href="file:///C:/Users/Klara/Desktop/everything/%C5%A0kola/SSPU/PVY/motherboard.jpg"
+                                    xlink:href="file:\\C:\Users\Klára\Desktop\School\pvy\hackers-master\img\motherboard.jpg"
                                     id="image3721"
                                     x="0"
                                     y="0"
